Correct the value for z-index of copy-button

--- a/HelpSource/static/scdoc.css
+++ b/HelpSource/static/scdoc.css
@@ -791,7 +791,7 @@ div.met_subclasses a.seemore {
     height: 20px;
     margin: 0;
     padding: 0;
-    z-index: 1000;
+    z-index: 1;
 }
 
 .copyIco:hover {
